2005-11-29  John W. Eaton  <jwe@octave.org>

	* miscellaneous/ver.m: Use new uname built-in function instead of
	calling system.  Only append octave_forge_string if
	OCTAVE_FORGE_VERSION exists.  Use puts instead of disp.
	Call license instead of hard-coding license info here.

	* miscellaneous/license.m: Use persistent instead of global for
	__octave_licenses__.  Use puts instad of disp.
	Use getuid and getpwuid instead of calling unix ("id -un").
	If nargout = 1, return license info instead of printing usage message.

2005-11-29  William Poetra Yoga Hadisoeseno  <williampoetra@gmail.com>

	* miscellaneous/ver.m: New file.
	* miscellaneous/license.m: New file.

2005-11-22  John W. Eaton  <jwe@octave.org>

	* plot/axis.m: Use %.16g instead of just %g to format ranges for
	gnuplot set command.

2005-11-15  John W. Eaton  <jwe@octave.org>

	* general/shiftdim.m: Doc fix.

2005-11-07  Keith Goodman  <kwgoodman@gmail.com>

	* set/unique.m: Doc string fix.

2005-11-01  John W. Eaton  <jwe@octave.org>

	* Makefile.in (distclean, maintainer-clean):
	Also remove autom4te.cache directory.
	From Quentin Spencer  <qspencer@ieee.org>.

2005-10-28  John W. Eaton  <jwe@octave.org>

	* general/shiftdim.m: Compatibility fix for row vectors.
	Correct check for non-scalar non-integer shift.  For positive
	N, shift is remainder of N and number of dims.  Always return NS.
	Simplify.

2005-10-18  Keith Goodman  <kwgoodman@gmail.com>

	* general/randperm.m: Improve compatibility by allowing input
	value of zero.

2005-10-13  John W. Eaton  <jwe@octave.org>

	* plot/__plt__.m, plot/__errplot__.m, plot/replot.m:
	If in multiplot mode, clear plot before issuing new plot command.

	* plot/__setup_plot__.m: New function.
	* plot/__plt__.m, plot__errplot__.m: Use it.
	Handle multiplot data and offsets here.

	* plot/__plot_globals__.m: Also keep track of multiplot options.
	Move initialization to __setup_plot__.m.

	* plot/subplot.m: Multiplot globals now in __plot_globals__.m.